--- a/content/06-cardano-components/03-cardano-rosetta/01-about-cardano-rosetta.mdx
+++ b/content/06-cardano-components/03-cardano-rosetta/01-about-cardano-rosetta.mdx
@@ -1,6 +1,6 @@
 ---
-title: Cardano Rosetta
-metaTitle: Cardano Rosetta
+title: About Cardano Rosetta
+metaTitle: About Cardano Rosetta
 ---
 import { OpenInNew } from 'styled-icons/material/OpenInNew'
 import { User } from 'styled-icons/boxicons-regular/User'
