--- a/content/06-cardano-components/03-cardano-rosetta/02-learn.mdx
+++ b/content/06-cardano-components/03-cardano-rosetta/02-learn.mdx
@@ -1,6 +1,6 @@
 ---
-title: Learn about Rosetta
-metaTitle: Learn about Rosetta
+title: Learn
+metaTitle: Learn
 ---
 
 Rosetta is an open source specification and set of tools that help you to integrate with blockchains. Serving as a general-purpose integration framework, Rosetta provides a high-level interface that can be customized to work with any chain. The goal of Rosetta is to make the integration process easier, faster, and more reliable so that you can build once and integrate your blockchain everywhere.
