--- a/content/02-getting-started/02-node-monitoring.mdx
+++ b/content/02-getting-started/02-node-monitoring.mdx
@@ -3,13 +3,13 @@ title: Logging and monitoring
 metaTitle: Logging and monitoring
 ---
 
-When the Cardano node is up and running, it is important to monitor its behavior regularly. This shows whether the node is running well, if the system is performing as it should (to keep the node running), and if there is anything needed to fine-tune system performance.
+Regular monitoring of active nodes is crucial to determine if the node is running optimally, if the system is performant, or if fine-tuning is required.
 
-To access metrics about how the node is performing (ie. network traffic, memory usage, and general blockchain data), you should activate a trace on the node. For details, see:
+Activate a trace on the node to access metrics, including network traffic, memory usage, and general blockchain data. For details, see:
 
 -   [Configuring logging](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/logging.md)
     
-You can then choose from a list of options to monitor your node:
+You can then choose a toolset to monitor your node:
 
 -   [Monitoring the node with EKG](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/ekg.md)
 -   [Using a Grafana Dashboard](https://github.com/input-output-hk/cardano-node/blob/master/doc/logging-monitoring/grafana.md)
