--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -38,3 +38,84 @@ For more information on the various options, see:
 -   [Building the node using Docker](https://hub.docker.com/r/inputoutput/cardano-node)
     
 When installing the node, it is also essential to build the [cardano-client](https://github.com/input-output-hk/cardano-node/tree/master/cardano-client-demo). This tool is built similarly to the node. Since it is so fundamental, all tutorials that build the node also build the client.
+
+## Configurations
+
+To start working with the node, it is essential to ensure that the node configuration, genesis and topology files are correctly set up. In addition, the node will need the configuration files specific to each era that the Cardano network has experienced thus far.
+
+These configurations tell the node how to handle the updates that come with each era (ie. Mary, Alonzo, Babbage, etc). Each new era (implemented using the [hard fork combinator technology](https://docs.cardano.org/core-concepts/about-hard-forks)) introduces protocol changes and new ledger rules. While old configurations are still valid, the new configurations and features offer new rules and improvements. In the Babbage era, for example, Plutus v2 scripts work better than Plutus v1 scripts. Plutus v1 scripts, however, are still supported. 
+
+For more details, see:
+
+-   [Understanding configuration files](https://github.com/input-output-hk/cardano-node/blob/master/doc/getting-started/understanding-config-files.md)
+-   [Cardano configuration files](https://book.world.dev.cardano.org/environments.html)
+    
+Another possible option to [configure the node is using YAML](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/configuring-a-node-using-yaml.md).
+
+## Working with the Cardano testnet
+
+Note that mainnet and testnet commands are very similar except for the flag usage. For example, when interacting with cardano-cli on mainnet, you should add the `--mainnet` flag. However, to use the same commands on testnet, you should use the `--tesntet-magic INTEGER` flag instead. `INTEGER` indicates the number of the testnet.
+
+The Cardano public testnet integer is `1097911063`.
+
+It is also useful to store this number in an environment variable: `export TESTNET=1097911063`. You can then use the flag as follows: `--testnet-magic $TESTNET`.
+
+### Creating keys and addresses
+
+To send and receive transactions, you should first create the payment key pair:
+
+```
+cardano-cli address key-gen \
+
+--verification-key-file payment.vkey \
+
+--signing-key-file payment.skey
+```
+
+This creates two files: `payment.vkey` (the public verification key) and `payment.skey` (the private signing key).
+
+Both verification keys (payment.vkey and stake.vkey) are used to build the address and the resulting payment address is associated with these keys.
+
+To build the address, run:
+
+```
+cardano-cli address build \
+--payment-verification-key-file payment.vkey \
+--stake-verification-key-file stake.vkey \
+--out-file payment.addr \
+--tesntet-magic INTEGER
+```
+
+To query the balance of the address, run:
+
+```
+cardano-cli query utxo \
+--address $(cat payment.addr) \
+--tesntet-magic INTEGER
+```
+
+For more commands, see:
+
+-   [Creating keys and addresses](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/keys_and_addresses.md)
+    
+Note to use the `--tesntet-magic INTEGER` flag instead of `--mainnet`.
+
+### Funding the address using a faucet
+
+To fund your testnet address, go to the testnet faucet and request some test ada (tADA):
+
+-   The testnet faucet
+    
+If you have an API key and prefer using the CLI, you can run the following command:
+
+```
+curl -v -XPOST "https://faucet.cardano-testnet.iohkdev.io/send-money/$YOURADDRESS?apiKey=$APIKEY"
+```
+
+### Creating, signing, and submitting transactions
+
+You’re now ready to create, sign, and submit transactions on testnet. See the tutorial:
+
+-   [Building and signing transactions](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/building-and-signing-tx.md)
+    
+Note to use the `--tesntet-magic INTEGER` flag instead of `--mainnet`.
