--- a/content/05-cardano-testnet/05-tools/01-faucet.mdx
+++ b/content/05-cardano-testnet/05-tools/01-faucet.mdx
@@ -5,27 +5,25 @@ metaTitle: Testnet Faucet
 
 import Faucet from '../../src/components/Faucet'
 
-## Faucet
+Since the Cardano testnet is an independent network, separate from the Cardano mainnet, it requires its own tokens.
 
-### What is the Faucet?
-
-The faucet is a web-based service that provides test ada to users of the
+The faucet is a web-based service that provides test ada (tADA) to users of the Cardano
 testnet. While these tokens have no 'real world' value, they enable users to
 experiment with Cardano testnet features, without having to spend real ada on
 the mainnet.
 
-#### To request tokens using the faucet:
+**To request tokens using the faucet:**
 
 1. Enter the address of the account where you want to top up funds.
 1. If you have been issued with an API key, please enter this to access any
-   additional funds you may have been allocated
+   additional funds you may have been allocated.
 1. Click **Request funds**.
-1. Funds will be in the testnet account you specified within a few minutes
+1. Funds will be in the testnet account you specified within a few minutes.
 
 _We have applied a daily faucet limit of 1000 test ada a day for each testnet
 user to ensure everyone has access to funds._
 
-Default funds are in tAda (test Ada).
+Default funds are in tADA.
 
 <Faucet />
 
