--- a/content/05-cardano-testnet/05-tools/03-plutus-fee-estimator.mdx
+++ b/content/05-cardano-testnet/05-tools/03-plutus-fee-estimator.mdx
@@ -5,8 +5,6 @@ metaTitle: Plutus Fee Estimator
 
 import SmartContractCalculator from '../../src/components/SmartContractCalculator'
 
-## Plutus fee estimator
-
 The Plutus fee estimator has been developed by IOG performance experts for price
 benchmarking and comparison. It uses information from real-world Plutus
 transactions and current mainnet settings to predict the fees that will be
@@ -30,7 +28,7 @@ The fee estimator needs three simple pieces of information:
   than 1,000,000 memory units (1MB of memory allocation).
 
 It calculates the cost for the corresponding transaction using current mainnet
-parameter settings, providing results both ada and in US dollars.
+parameter settings, providing results in both ada and US dollars.
 
 The information that the fee estimator uses can either be obtained:
 
