--- a/content/05-cardano-testnet/05-tools/01-faucet.mdx
+++ b/content/05-cardano-testnet/05-tools/01-faucet.mdx
@@ -1,6 +1,6 @@
 ---
-title: Testnet Faucet
-metaTitle: Testnet Faucet
+title: Testnet faucet
+metaTitle: Testnet faucet
 ---
 
 import Faucet from '../../src/components/Faucet'
