--- a/content/05-cardano-testnet/05-tools/02-staking-calculator.mdx
+++ b/content/05-cardano-testnet/05-tools/02-staking-calculator.mdx
@@ -1,6 +1,6 @@
 ---
-title: Staking Calculator
-metaTitle: Staking Calculator
+title: Staking calculator
+metaTitle: Staking calculator
 ---
 
 import StakingCalculator from '../../src/components/StakingCalculator/StakingCalculator'
