--- a/content/05-cardano-testnet/05-tools/03-plutus-fee-estimator.mdx
+++ b/content/05-cardano-testnet/05-tools/03-plutus-fee-estimator.mdx
@@ -1,6 +1,6 @@
 ---
-title: Plutus Fee Estimator
-metaTitle: Plutus Fee Estimator
+title: Plutus fee estimator
+metaTitle: Plutus fee estimator
 ---
 
 import SmartContractCalculator from '../../src/components/SmartContractCalculator'
