fix import errors, remove iframes from external tools, add testnet daedalus wallet downloaders

--- a/content/05-cardano-testnet/05-tools/01-faucet.mdx
+++ b/content/05-cardano-testnet/05-tools/01-faucet.mdx
@@ -3,14 +3,15 @@ title: Testnet faucet
 metaTitle: Testnet faucet
 ---
 
-import Faucet from '../../src/components/Faucet'
+import Faucet from '../../../src/components/Faucet'
 
-Since the Cardano testnet is an independent network, separate from the Cardano mainnet, it requires its own tokens.
+Since the Cardano testnet is an independent network, separate from the Cardano
+mainnet, it requires its own tokens.
 
-The faucet is a web-based service that provides test ada (tADA) to users of the Cardano
-testnet. While these tokens have no 'real world' value, they enable users to
-experiment with Cardano testnet features, without having to spend real ada on
-the mainnet.
+The faucet is a web-based service that provides test ada (tADA) to users of the
+Cardano testnet. While these tokens have no 'real world' value, they enable
+users to experiment with Cardano testnet features, without having to spend real
+ada on the mainnet.
 
 **To request tokens using the faucet:**
 
