--- a/content/05-cardano-testnet/05-tools/03-plutus-fee-estimator.mdx
+++ b/content/05-cardano-testnet/05-tools/03-plutus-fee-estimator.mdx
@@ -3,7 +3,7 @@ title: Plutus fee estimator
 metaTitle: Plutus fee estimator
 ---
 
-import SmartContractCalculator from '../../src/components/SmartContractCalculator'
+import SmartContractCalculator from '../../../src/components/SmartContractCalculator'
 
 The Plutus fee estimator has been developed by IOG performance experts for price
 benchmarking and comparison. It uses information from real-world Plutus
