--- a/content/05-cardano-testnet/04-daedalus-testnet.mdx
+++ b/content/05-cardano-testnet/04-daedalus-testnet.mdx
@@ -3,23 +3,28 @@ title: Daedalus wallet for the Cardano testnet
 metaTitle: Daedalus wallet for the Cardano testnet
 ---
 
-Here you can download any of the special testnet-only versions of the Daedalus wallet. Please note that this wallet is for testing purposes only. It may not be fully-featured and may contain bugs.
+import WalletDownloaders from '../../src/components/WalletDownloaders'
 
-### Daedalus system requirements 
+Here you can download any of the special testnet-only versions of the Daedalus
+wallet. Please note that this wallet is for testing purposes only. It may not be
+fully-featured and may contain bugs.
+
+### Daedalus system requirements
 
 **Operating systems**
 
-* Windows 8.1, Windows 10 (Only 64-bit Windows is supported)
-* macOS 10.13, macOS 10.14, macOS 10.15, macOS 11.1
-* Linux OS Tested against:
-  * Ubuntu 18.04 LTS, Ubuntu 20.04 LTS
-  * Fedora 28
-  * Aimed at all Linux distributions
+- Windows 8.1, Windows 10 (Only 64-bit Windows is supported)
+- macOS 10.13, macOS 10.14, macOS 10.15, macOS 11.1
+- Linux OS Tested against:
+  - Ubuntu 18.04 LTS, Ubuntu 20.04 LTS
+  - Fedora 28
+  - Aimed at all Linux distributions
 
 **Recommended hardware requirements**
 
-* 64-bit Dual core processors
-* 16 GB of RAM
-* 25 GB of free drive space
-* Broadband Internet connection
+- 64-bit Dual core processors
+- 16 GB of RAM
+- 25 GB of free drive space
+- Broadband Internet connection
 
+<WalletDownloaders />
