--- a/content/05-cardano-testnet/05-tools/04-grafana-dashboard.mdx
+++ b/content/05-cardano-testnet/05-tools/04-grafana-dashboard.mdx
@@ -5,12 +5,4 @@ metaTitle: Grafana Dashboard
 
 import { OpenInNew } from 'styled-icons/material/OpenInNew'
 
-<Iframe tall>
-  <iframe
-    src="https://monitoring.cardano-testnet.iohkdev.io/grafana/d/Oe0reiHef/cardano-application-metrics-v2?orgId=1&refresh=1m&from=now-2d&to=now"
-    width="1600"
-    height="900"
-  ></iframe>
-</Iframe>
-
-[<Button primary>View in Browser <OpenInNew /></Button>](https://monitoring.cardano-testnet.iohkdev.io/grafana/d/Oe0reiHef/cardano-application-metrics-v2?orgId=1&refresh=1m&from=now-2d&to=now)
+[<Button primary>View the Grafana Dashboard <OpenInNew /></Button>](https://monitoring.cardano-testnet.iohkdev.io/grafana/d/Oe0reiHef/cardano-application-metrics-v2?orgId=1&refresh=1m&from=now-2d&to=now)
