--- a/content/05-cardano-testnet/05-tools/05-testnet-explorer.mdx
+++ b/content/05-cardano-testnet/05-tools/05-testnet-explorer.mdx
@@ -5,12 +5,4 @@ metaTitle: Testnet Explorer
 
 import { OpenInNew } from 'styled-icons/material/OpenInNew'
 
-<Iframe tall>
-  <iframe
-    src="https://explorer.cardano-testnet.iohkdev.io/en"
-    width="1600"
-    height="900"
-  ></iframe>
-</Iframe>
-
-[<Button primary>View in Browser <OpenInNew /></Button>](https://explorer.cardano-testnet.iohkdev.io/en)
+[<Button primary>View the testnet explorer <OpenInNew /></Button>](https://explorer.cardano-testnet.iohkdev.io/en)
