--- a/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/06-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -73,7 +73,9 @@ Usually, the cost is $5 per terabyte (TB) of the data queried. Find more informa
 > **Note** that Cardano data tables are divided by epoch numbers so that queries can be made according to the epoch of choice, incurring less costs.
 
 ## Query table schemas
-The
+
+The following tables are available in the dataset:
+
 1.  Table: block
 2.  Table: block_hash
 3.  Table: collateral
