--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -3,6 +3,9 @@ title: Vasil testnet introduction
 metaTitle: Vasil testnet introduction
 ---
 
+>Note: A new dedicated pre-production environment has been freshly spun up for the final stages of testing Vasil functionality. This environment offers improved chain density and a better developer experience.
+
+>We recommend that all developers, SPOs, and exchanges use this environment rather than the main Cardano testnet. To join the pre-production environment for testing, update your  [latest configurations here](https://book.world.dev.cardano.org/environments.html#pre-prod).
 The Cardano testnet has been upgraded to Vasil functionality and is now available for public functionality testing. 
 
 Vasil enforces the next major upgrade to the Cardano protocol using [Cardano’s hard fork combinator (HFC) approach](https://docs.cardano.org/core-concepts/about-hard-forks). This upgrade is named after a much loved and respected Cardano community member, Vasil St Dabov.
