new link to dev updates

--- a/content/02-new-to-cardano/03-why-use-cardano.mdx
+++ b/content/02-new-to-cardano/03-why-use-cardano.mdx
@@ -169,4 +169,4 @@ over time in a decentralized way.
 -   [Understanding Cardano](https://www.youtube.com/watch?v=Ja9D0kpksxw) (Cardano whiteboard by Charles Hoskinson)
 -   [Cardano design rationale](/explore-cardano/cardano-design-rationale)
 -   [Detailed Cardano roadmap](https://roadmap.cardano.org/en/)
--   [Development status updates](https://roadmap.cardano.org/en/status-updates/)
+-   [Development status updates](https://www.essentialcardano.io/development-update)
