--- a/content/03-learn/07-consensus-explained.mdx
+++ b/content/03-learn/07-consensus-explained.mdx
@@ -28,12 +28,10 @@ our ground-breaking proof-of-stake consensus protocol, is proven to have the sam
 security guarantees as proof-of-work. Ouroboros establishes security guarantees, and the protocol
 was delivered with several peer-reviewed papers presented in top-tier conferences and
 publications in the area of cybersecurity and cryptography. Different
-[implementations of Ouroboros](https://iohk.io/en/blog/posts/2020/03/23/from-classic-to-hydra-the-implementations-of-ouroboros-explained/)
+[implementations of Ouroboros](https://iohk.io/en/blog/posts/2022/06/03/from-classic-to-chronos-the-implementations-of-ouroboros-explained/)
 have been developed. For further details on each flavour of Ouroboros, you can
 read the technical specifications for
 [Classic](https://iohk.io/en/research/library/papers/ouroborosa-provably-secure-proof-of-stake-blockchain-protocol/),
 [Byzantine Fault Tolerance (BFT)](https://iohk.io/en/research/library/papers/ouroboros-bfta-simple-byzantine-fault-tolerant-consensus-protocol/),
-[Genesis](https://iohk.io/en/research/library/papers/ouroboros-genesiscomposable-proof-of-stake-blockchains-with-dynamic-availability/),
-[Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/),
-and more recently the scalability solution
-[Hydra](https://eprint.iacr.org/2020/299.pdf).
+[Genesis](https://iohk.io/en/research/library/papers/ouroboros-genesiscomposable-proof-of-stake-blockchains-with-dynamic-availability/), and 
+[Praos](https://iohk.io/en/research/library/papers/ouroboros-praosan-adaptively-securesemi-synchronous-proof-of-stake-protocol/).
