--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -3,7 +3,7 @@ title: Getting started
 metaTitle: Getting started with the Cardano testnet
 ---
 
-To get started and join the Cardano testnet, you should install and configure the Cardano node and the command line interface (CLI), and generate payment keys and addresses. Note, that you will also need **to get some test ada** (tADA) to test your transactions, which will be possible to monitor using [Cardano Testnet Explorer](https://explorer.cardano-testnet.iohkdev.io/en) or [Testnet Cardanoscan](https://testnet.cardanoscan.io/) for example.
+To get started and join the Cardano testnet, you should install and configure the Cardano node and the command line interface (CLI), and generate payment keys and addresses. Note, that you will also need **to get some test ada** to test your transactions, which will be possible to monitor using [Cardano Testnet Explorer](https://explorer.cardano-testnet.iohkdev.io/en) or [Testnet Cardanoscan](https://testnet.cardanoscan.io/) for example.
 
 ## System requirements
 
@@ -100,7 +100,7 @@ Note to use the `--tesntet-magic INTEGER` flag instead of `--mainnet`.
 
 ### Funding the address using a faucet
 
-To fund your testnet address, go to the testnet faucet and request some test ada (tADA):
+To fund your testnet address, go to the testnet faucet and request some test ada:
 
 -   The testnet faucet
     
