Fix: Updated link for Precompiled executable files

--- a/content/02-getting-started/01-installing-the-cardano-node.mdx
+++ b/content/02-getting-started/01-installing-the-cardano-node.mdx
@@ -6,7 +6,7 @@ metaTitle: Installing the Cardano node
 ## Downloading pre-compiled executables
 
 You can install the Cardano node and cli using
-[pre-compiled executable files](https://github.com/input-output-hk/cardano-node#linux-executable)
+[pre-compiled executable files](https://github.com/input-output-hk/cardano-node#executables)
 for your platform.
 
 ## Building from source
