--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -6,7 +6,6 @@ metaTitle: Vasil testnet introduction
 >Note: A new dedicated pre-production environment has been freshly spun up for the final stages of testing Vasil functionality. This environment offers improved chain density and a better developer experience.
 
 >We recommend that all developers, SPOs, and exchanges use this environment rather than the main Cardano testnet. To join the pre-production environment for testing, update your  [latest configurations here](https://book.world.dev.cardano.org/environments.html#pre-prod).
-The Cardano testnet has been upgraded to Vasil functionality and is now available for public functionality testing. 
 
 Vasil enforces the next major upgrade to the Cardano protocol using [Cardano’s hard fork combinator (HFC) approach](https://docs.cardano.org/core-concepts/about-hard-forks). This upgrade is named after a much loved and respected Cardano community member, Vasil St Dabov.
 
@@ -27,7 +26,7 @@ More specifically, this upgrade introduces:
 To get started, make sure to:
 
 * upgrade your [node configuration, topology, and genesis files](https://book.world.dev.cardano.org/environments.html)
-* check [getting started tutorials](new link)
+* check getting started tutorials
 * see [Vasil testnet tutorials](https://github.com/input-output-hk/Vasil-testnet)
 * see [Babbage script examples](https://github.com/input-output-hk/cardano-node/tree/master/doc/reference/plutus)
 
