--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -104,6 +104,10 @@ To fund your testnet address, go to the testnet faucet and request some test ada
 
 -   The testnet faucet
 
+If you're working in a *preproduction environment* and have an API key, you can run the following command to fund your address:
+
+`curl -X POST -s 'https://faucet.preprod.world.dev.cardano.org/send-money/YOURADDRESS?api_key=YOURAPIKEY'`
+
 ### Creating, signing, and submitting transactions
 
 You’re now ready to create, sign, and submit transactions on testnet. See the tutorial:
