--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -26,7 +26,7 @@ More specifically, this upgrade introduces:
 To get started, make sure to:
 
 * upgrade your [node configuration, topology, and genesis files](https://book.world.dev.cardano.org/environments.html)
-* check getting started tutorials
+* check the 'Getting started' tutorial
 * see [Vasil testnet tutorials](https://github.com/input-output-hk/Vasil-testnet)
 * see [Babbage script examples](https://github.com/input-output-hk/cardano-node/tree/master/doc/reference/plutus)
 
@@ -35,7 +35,6 @@ Also, note that:
 -  With the Vasil hard fork on mainnet, the *d* parameter will be removed since block production is now fully decentralized, and this will prevent re-federation.
 -   If you are an SPO, you now need to create your operational certificate using cold.counter +1. The `OpCert` must be exactly one more than the previously used one.
 -   The `minUTxO` formula is now calculated using original bytes instead of `lovelacePerUTxOWord`.
--   When installing the Cardano node, it is now essential to install the `secp256k1` library. See [node installation details here](https://github.com/input-output-hk/cardano-node/blob/master/doc/getting-started/install.md/).
 
 **Feedback**
 
