--- a/content/05-cardano-testnet/05-tools/01-faucet.mdx
+++ b/content/05-cardano-testnet/05-tools/01-faucet.mdx
@@ -8,7 +8,7 @@ import Faucet from '../../../src/components/Faucet'
 Since the Cardano testnet is an independent network, separate from the Cardano
 mainnet, it requires its own tokens.
 
-The faucet is a web-based service that provides test ada (tADA) to users of the
+The faucet is a web-based service that provides test ada to users of the
 Cardano testnet. While these tokens have no 'real world' value, they enable
 users to experiment with Cardano testnet features, without having to spend real
 ada on the mainnet.
@@ -24,7 +24,7 @@ ada on the mainnet.
 _We have applied a daily faucet limit of 1000 test ada a day for each testnet
 user to ensure everyone has access to funds._
 
-Default funds are in tADA.
+Default funds are in test ada.
 
 <Faucet />
 
