proper solution for external url entries

--- a/content/05-cardano-testnet/05-tools/05-testnet-explorer.mdx
+++ b/content/05-cardano-testnet/05-tools/05-testnet-explorer.mdx
@@ -1,6 +1,7 @@
 ---
 title: Testnet Explorer
 metaTitle: Testnet Explorer
+externalUrl: https://explorer.cardano-testnet.iohkdev.io/en
 ---
 
 import { OpenInNew } from 'styled-icons/material/OpenInNew'
