style guide tweaks

--- a/content/02-new-to-cardano/07-how-to-purchase-ada.mdx
+++ b/content/02-new-to-cardano/07-how-to-purchase-ada.mdx
@@ -12,7 +12,7 @@ exchanges.
 
 We do not recommend any particular exchange, as there are many great options.
 However, you can find
-[a list of exchanges listing ADA on Cardano markets.](https://coinmarketcap.com/currencies/cardano/markets/)
+[a list of exchanges listing ada on Cardano markets.](https://coinmarketcap.com/currencies/cardano/markets/)
 
 ### Step 1 Download a wallet
 
