Adding a link to Plutus explainer

--- a/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
+++ b/content/02-new-to-cardano/10-what-is-a-smart-contract.mdx
@@ -39,3 +39,4 @@ contracts using such programming languages as:
 #### Related Topics
 
 - [Marlowe explainer](/marlowe/learn-about-marlowe)
+- [Plutus explainer](/plutus/learn-about-plutus)
