--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -14,7 +14,7 @@ Vasil brings changes that will improve [the handling of on-chain (Plutus) script
 More specifically, this upgrade introduces:
 
 -   Diffusion pipelining
--   Plutus v2 (a tuned interpreter, and a new cost model)
+-   Plutus V2 (a tuned interpreter, and a new cost model)
 -   New Plutus built-ins
 -   Plutus reference inputs
 -   Plutus inline datums
