--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -23,9 +23,7 @@ Download the latest version of the node:
 
 Check your executables. The latest versions of the Cardano node and CLI can be found here:
 
--   [Linux](https://hydra.iohk.io/build/16934881)
--   [Win64](https://hydra.iohk.io/job/Cardano/cardano-node/linux.windows.cardano-node-win64/latest-finished)
--   [macOS](https://hydra.iohk.io/job/Cardano/cardano-node/macos.cardano-node-macos/latest-finished)
+-   [Cardano node executables](https://github.com/input-output-hk/cardano-node#executables)
     
 There are a number of ways to install and run a Cardano node on testnet. The choice of the best-matching method depends on the operating system, level of technical expertise, and personal preferences.
 
