--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -46,7 +46,7 @@ These configurations tell the node how to handle the updates that come with each
 For more details, see:
 
 -   [Understanding configuration files](https://github.com/input-output-hk/cardano-node/blob/master/doc/getting-started/understanding-config-files.md)
--   [Configuring the node using YAML](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/configuring-a-node-using-yaml.md).
+-   [Configuring the node using YAML](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/configuring-a-node-using-yaml.md)
 
 ## Environments
 
