--- a/content/05-cardano-testnet/03-getting-started.mdx
+++ b/content/05-cardano-testnet/03-getting-started.mdx
@@ -88,7 +88,7 @@ Pre-production is the most mature network for testing purposes, which resembles 
 [**Pre-production configurations**](https://book.world.dev.cardano.org/environments.html#pre-production-testnet)
 
 
-\> Note that the **Cardano testnet** is no longer recommended for testing purposes. It will be deprecated in several months, and the community is encouraged to use the environments listed above for functionality testing. Currently, the testnet supports node v.1.35.0, v.1.35.1, and v.1.35.2. It _does not_ support node v.1.35.3, which is a Vasil release candidate.
+>Note that the **Cardano testnet** is no longer recommended for testing purposes. It will be deprecated in several months, and the community is encouraged to use the environments listed above for functionality testing. Currently, the testnet supports node v.1.35.0, v.1.35.1, and v.1.35.2. It _does not_ support node v.1.35.3, which is a Vasil release candidate.
 
 **Production network (mainnet)**
 
