--- a/content/05-cardano-testnet/01-overview.mdx
+++ b/content/05-cardano-testnet/01-overview.mdx
@@ -3,8 +3,7 @@ title: Overview
 metaTitle: Overview
 ---
 
-The Cardano testnet sits at the vanguard of the network development. It provides a sandboxed environment for continuing innovation, harnessing the power of the Cardano community to iterate and improve.
+Cardano testnets sit at the vanguard of network development, providing sandboxed environments for continuing innovation, harnessing the power of the Cardano community to iterate and improve.
 
-The Cardano testnet gives stake pool operators, smart contract developers, and projects the opportunity to actively test core Cardano functionality prior to deploying on mainnet. 
+Stake pool operators, exchanges, smart contract developers, and projects can engage with different early-stage and pre-production networks to actively test core Cardano functionality prior to deploying on mainnet.
 
-The Cardano testnet has now been upgraded to Vasil functionality. Find out more about the Vasil upgrade and features in the following sections.
