--- a/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
+++ b/content/05-cardano-testnet/02-about/01-testnet-introduction.mdx
@@ -1,11 +1,11 @@
 ---
-title: Vasil testnet introduction
-metaTitle: Vasil testnet introduction
+title: Vasil introduction
+metaTitle: Vasil introduction
 ---
 
->Note: A new dedicated pre-production environment has been freshly spun up for the final stages of testing Vasil functionality. This environment offers improved chain density and a better developer experience.
+>Note: New dedicated *preview* and *pre-production* environments have been recently spun up for the final stages of testing Vasil functionality. These environments offer improved chain density and a better developer experience.
 
->We recommend that all developers, SPOs, and exchanges use this environment rather than the main Cardano testnet. To join the pre-production environment for testing, update your  [latest configurations here](https://book.world.dev.cardano.org/environments.html#pre-prod).
+>We recommend that all developers, SPOs, and exchanges use these environments rather than the main Cardano testnet. For more details, see [environments overview here](https://docs.cardano.org/cardano-testnet/getting-started/#environments).
 
 Vasil enforces the next major upgrade to the Cardano protocol using [Cardano’s hard fork combinator (HFC) approach](https://docs.cardano.org/core-concepts/about-hard-forks). This upgrade is named after a much loved and respected Cardano community member, Vasil St Dabov.
 
